fix: tree remove MacScrollbar

--- a/src/components/BaseTree/base/index.less
+++ b/src/components/BaseTree/base/index.less
@@ -4,10 +4,12 @@
   height: 0;
   min-height: 100%;
   overflow-y: auto;
-  scrollbar-gutter: auto;
+  // scrollbar-gutter: auto;
   position: relative;
   user-select: none;
   transition: background 0.2s ease-out;
+  .scrollbarModern();
+
   &.drag-over {
     background: @colorBgHover;
   }
